# Assignment3-NVIDIA-MultimodalResearchAssistant

./: .gitignore  README.md  pyproject.toml
Airflow_Docker/: Dockerfile  docker-compose.yaml
Airflow_Docker/dags/: pdf_extraction_dag.py  scrape_cfa_publications_dag.py  snowflake_load_dag.py  snowflake_setup_dag.py
Fastapi/: config.py  main.py
Fastapi/routers/: documents.py
Frontend/: app.py
backend/: milvus_demo.db
backend/fast_api/: fastapi_main.py
backend/fast_api/routers/: rag_router.py  s3_router.py  snowflake_router.py  summarization_router.py
backend/fastapi/: fastapi_main.py
backend/fastapi/routers/: s3_router.py  snowflake_router.py  summarization_router.py
backend/utils/: helper_functions.py  pdf_processor.py
diagrams/: diagrams.ipynb
frontend/: app.py  utils.py
frontend/streamlit_pages/: detail_view.py  grid_view.py  qa_interface.py  report_page.py  utils.py
frontend/utils/: helper_functions.py  pdf_processor.py
llamaindex/: SQLAlchemy_Llama_Snowflake.ipynb
video_2_multimodal-rag/: app.py
